backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: gogreen-app
spec:
  selector:
    app: backend
  ports:
  - port: 8282
    targetPort: 8282
    nodePort: 30082  # Add this line with a port between 30000-32767
  type: NodePort
