pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: gogreen-app
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
