postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-book-db
  namespace: spring-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-book-db
  template:
    metadata:
      labels:
        app: spring-book-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spring-book-db-service
  namespace: spring-book
spec:
  selector:
    app: spring-book-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
