postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-book-db-service
  namespace: gogreen-app
spec:
  selector:
    app: spring-book-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
